DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2011-11-26 patrick     Implemented new digital device multi-click handling in
                       gadget::DigitalClickEventInterface.
                       NEW VERSION: 2.1.23
2011-11-26 patrick     Implemented periodic event emission. This occurs in a
                       thread that is separate from the kernel control loop
                       and any device driver sample thread.
                       NEW VERSION: 2.1.22
2011-11-26 patrick     Reimplemented gadget::AnalogEventInterface as a
                       multi-event interface. Previously, only raw
                       (non-normalized) analog data was delivered to event
                       callbacks. Now, either normalized or raw data can be
                       received.
                       NEW VERSION: 2.1.21
2011-08-24 patrick     Implemented new multi-click handling in
                       gadget::MouseClickEventInterface.
                       NEW VERSION: 2.1.20
2011-08-22 patrick     Changed input device type identification from string
                       name to integer type ID. Subclasses of gadget::Input
                       must now implement getTypeId() and not getTypeName().
                       This is handled automatically by gadget::InputDevice<T>.
                       NEW VERSION: 2.1.19
2011-05-28 patrick     Replaced gadget::InputMixer<T1,T2> with
                       gadget::InputDevice<T>. The template parameter is
                       either one of the device base types (gadget::Digital,
                       gadget::Analog, etc.) or a combination of multiple
                       types produced using
                       boost::mpl::inherit<T1,T2,...,Tn>::type.
                       NEW VERSION: 2.1.18
2011-05-14 patrick     gadget::TypedProxy<T> now emits a signal